# multi-agent-with-bappy

./: README.md  app.py  demo.excalidraw  main.py  pyproject.toml
notebooks/: experiments.ipynb
src/agents/: agents.py
src/pipelines/: pipelines.py
src/tools/: tools.py
