[project]
name = "multi-agent-with-bappy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "ipykernel>=7.3.0",
    "langchain>=1.3",
    "langchain-community>=0.4",
    "langchain-core>=1.4",
    "langchain-groq>=1.1",
    "langgraph>=1.2",
    "lxml>=6.1.1",
    "python-dotenv>=1.2.2",
    "readability-lxml>=0.8.4.1",
    "requests>=2.31.0",
    "streamlit>=1.58.0",
    "tavily-python>=0.7.26",
    "trafilatura>=2.1.0",
]
